updated layout, animations, locations, etc.

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ h3 {
   text-shadow: 2px 2px 5px white;
 }
 
-.homeBody {
+.mainBody {
   background-color: rgba(0, 0, 0, 0.3);
   padding: 20px;
 }
