--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,23 @@
 
 
 body {
-
-    /* color: white; */
-  /* background: url("../../images/wood_bg.jpg"); */
-  background-image: url("./wood_bg.jpg");
+  /* background-image: url("./wood_bg.jpg"); */
+  background-image: linear-gradient(to bottom, white, #a8a8a8);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+
+
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .navbar-brand {
-  font-family: 'Expletus Sans', cursive;
-  font-size: 38px;
+font-family: 'Alfa Slab One', cursive;
+/* font-family: 'Comfortaa', cursive; */
+font-size: 38px;
 }
 
 h3 {
@@ -22,7 +26,22 @@ h3 {
 
 .mainBody {
   background-color: rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  padding: 20px 20px 50px 20px;
+}
+
+.mainContainer {
+  padding-bottom:500px;
+}
+
+.headerBox {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.project {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding-top: 25px;
+  padding-bottom: 50px;
+  width: 75%;
 }
 
 p {
@@ -31,15 +50,4 @@ color: white
 
 h1 {
   color: white
-}
-
-
-.footer {
-    padding: 30px 0;
-    font-size: 12px;
-    color: #ffffff;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.4);
-    height: 50px;
-    width: 1080px
 }
