--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.4);
+  border: 5px solid;
+  border-image-slice: 1;
+  border-width: 0px 0px 5px 0px;
+  border-image-source: linear-gradient(to right, #fa9600, #ff0800);
 }
 
 .navbar-brand {
@@ -20,21 +24,33 @@ font-family: 'Alfa Slab One', cursive;
 font-size: 38px;
 }
 
-h3 {
-  text-shadow: 2px 2px 5px white;
+h3, h2 {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  /* text-shadow: 2px 2px 5px white; */
 }
 
-.mainBody {
+.mainBody{
   background-color: rgba(0, 0, 0, 0.3);
   padding: 20px 20px 50px 20px;
+  width: 75%;
+ 
+}
+
+.contactBody {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 50px;
+  width: 75%;
+  color: white;
+
 }
 
 .mainContainer {
   padding-bottom:500px;
 }
 
-.headerBox {
-  background-color: rgba(0, 0, 0, 0.3);
+.header {
+color: rgb(90, 90, 90)
 }
 
 .project {
@@ -45,9 +61,12 @@ h3 {
 }
 
 p {
-color: white
+color: white;
+font-size: 18px;
+/* font-family: 'Raleway', sans-serif; */
 }
 
 h1 {
-  color: white
+  color: white;
+  font-family: 'Raleway', sans-serif;
 }
