--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ h3, h2 {
   padding-bottom:500px;
 }
 
-.header {
+.header, .icon {
 color: rgb(90, 90, 90)
 }
 
@@ -69,3 +69,5 @@ h1 {
   color: white;
   font-family: 'Raleway', sans-serif;
 }
+
+
