--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,12 @@ color:white
 }
 
 .maskTitle {
-  color: rgba(44,83,131,1)
+  color: rgba(44,83,131,1);
+  font-weight: 900;
+}
+
+.masktools {
+  font-weight: 800;
 }
 
 .button {
@@ -99,4 +104,6 @@ color:white;
 background-color:rgba(95,175,201,1);
 }
 
-
+h5 {
+  font-weight: 700;
+}
