--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,10 @@ body {
 .navbar {
   border: solid;
   border-width: 0px 0px 1px 0px;
-  border-color: rgba(255, 255, 255, 0.5);
+  /* border-color: rgba(255, 255, 255, 0.5); */
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255));
+
 }
 
 .navbar-brand {
@@ -24,8 +27,8 @@ font-size: 38px;
 }
 
 .navbar-nav {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  bottom: -15px;
 }
 
 .navbar-nav {
@@ -72,18 +75,18 @@ color:white
 }
 
 .mask{
-  color: black;
+  color: white;
+  /* color: black; */
   font-family: 'Raleway', sans-serif;
 }
 
 .maskTitle {
-  color: rgba(44,83,131,1);
-  font-weight: 900;
+  /* color: rgba(44,83,131,1); */
+  color: rgb(0, 191, 255);
+
 }
 
-.masktools {
-  font-weight: 800;
-}
+
 
 .button {
   border: none;
@@ -107,3 +110,37 @@ background-color:rgba(95,175,201,1);
 h5 {
   font-weight: 700;
 }
+
+@media only screen and (max-width: 1024px) {
+  iframe {
+width: 75%;
+height: 925px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  iframe {
+width: 100%;
+height: 900px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  iframe {
+height: 450px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  iframe {
+height: 400px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  iframe {
+height: 325px;
+  }
+}
+
+
