--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ color: rgb(255, 255, 255)
 p {
 color: white;
 font-size: 18px;
-/* font-family: 'Raleway', sans-serif; */
+font-family: 'Raleway', sans-serif;
 }
 
 h2 {
