updated Raleway font weight to 500

--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,10 @@ font-size: 18px;
 font-family: 'Raleway', sans-serif;
 }
 
+h1 {
+  font-family: 'Raleway', sans-serif;
+}
+
 h2 {
 color:white
 }
