--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,12 @@ height: 450px;
   }
 }
 
+@media only screen and (max-width: 675px) {
+  iframe {
+height: 650px;
+  }
+}
+
 @media only screen and (max-width: 375px) {
   iframe {
 height: 400px;
