--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,15 @@ font-size: 38px;
 .navbar-nav {
   position: relative;
   bottom: -15px;
-}
-
-.navbar-nav {
   color: white;
   font-family: 'Raleway', sans-serif;
 }
 
+.nav-link.active {
+border-bottom: 2px solid currentColor;
+padding-bottom: 0px;
+
+}
 
 .mainBody{
   background-color: rgba(0, 0, 0, 0.3);
@@ -63,6 +65,7 @@ color: rgb(255, 255, 255)
 .strengthDescription, .skillIconName {
   color: rgb(255, 255, 255, 0);
   margin-top: 5px;
+  font-family: 'Raleway', sans-serif;
   /* display: none */
 }
 
@@ -74,6 +77,10 @@ color: rgb(255, 255, 255)
 .strengthIcon:hover + .strengthDescription {
   /* display: block; */
   color: rgb(255, 255, 255)
+}
+
+.skillIcon:hover, .strengthIcon:hover {
+  transform:scale(1.3,1.3);
 }
 
 .project {
