--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,12 @@ body {
 .brandInitials {
   /* font-family: 'Alfa Slab One', cursive; */
   font-size: 50px;
+  
 }
 
 .brandName {
   font-size: 15px;
-
+  margin-top: -10px
 }
 .navbar {
   box-shadow: none;
@@ -40,6 +41,7 @@ body {
   bottom: -30px;
   color: white;
   font-family: 'Raleway', sans-serif;
+  font-size: 18px;
 }
 
 .nav-link.active {
@@ -48,7 +50,7 @@ padding-bottom: 0px;
 }
 
 .headshot {
-  width: 80%;
+  width: 60%;
   float:right
 }
 
@@ -71,14 +73,15 @@ font-family: 'Montserrat', sans-serif;
 }
 
 .mainBody {
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  /* background-color: rgba(0, 0, 0, 0.3); */
+  /* padding: 20px; */
   width: 75%;
 }
 
 
  .skillsSection {
-  background-color: rgba(0, 0, 0, 0.3);
+  /* background-color: rgba(0, 0, 0, 0.3); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.15));
   padding: 0px 25px 0px 25px;
   width: 75%;
 }
@@ -91,13 +94,13 @@ font-family: 'Montserrat', sans-serif;
   content: ""; /* This is necessary for the pseudo element to work. */ 
   display: block; /* This will put the pseudo element on its own line. */
   margin: 0 auto; /* This will center the border. */
-  width: 15%; /* Change this to whatever width you want. */
-  border-bottom: 1px solid; /* This creates the border. Replace black with whatever color you want. */
+  width: 25%; /* Change this to whatever width you want. */
+  border-bottom: 2px solid; /* This creates the border. Replace black with whatever color you want. */
 
 }
 
 .contactBody {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
   padding: 50px;
   width: 75%;
   color: white;
@@ -125,13 +128,14 @@ color: rgb(255, 255, 255)
 
 .skillIcon:hover + .skillIconName {
   /* display: block; */
-  color: rgb(255, 255, 255)
+  color: rgb(255, 255, 255);
+  transform:scale(1.3,1.3);
 }
 
-.strengthIcon:hover + .strengthDescription {
-  /* display: block; */
+/* .strengthIcon:hover + .strengthDescription {
+  display: block;
   color: rgb(255, 255, 255)
-}
+} */
 
 .skillIcon:hover, .strengthIcon:hover {
   transform:scale(1.3,1.3);
@@ -188,6 +192,11 @@ background-color:rgba(95,175,201,1);
 
 h5 {
   font-weight: 700;
+}
+
+.subHeader {
+margin-bottom: 4vw;
+color: rgb(0, 191, 255);
 }
 
 @media only screen and (max-width: 1024px) {
