--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,9 @@ padding-bottom: 0px;
 
 .myDescription {
   color: rgb(74, 210, 255);
-font-weight: 100;
-font-size: 2vw;
-font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
+  font-size: 2vw;
+  font-family: 'Montserrat', sans-serif;
 
 }
 
@@ -83,7 +83,7 @@ font-family: 'Montserrat', sans-serif;
   /* background-color: rgba(0, 0, 0, 0.3); */
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.15));
   padding: 0px 25px 0px 25px;
-  width: 75%;
+  width: 85%;
 }
 
 .header, .skillsHeader {
@@ -122,6 +122,7 @@ color: rgb(255, 255, 255)
 .strengthDescription, .skillIconName {
   color: rgb(255, 255, 255, 0);
   margin-top: 5px;
+  margin-bottom: 20px;
   font-family: 'Raleway', sans-serif;
   /* display: none */
 }
@@ -131,6 +132,7 @@ color: rgb(255, 255, 255)
   color: rgb(255, 255, 255);
   transform:scale(1.3,1.3);
 }
+
 
 /* .strengthIcon:hover + .strengthDescription {
   display: block;
@@ -158,10 +160,10 @@ h1 {
 h2 {
 color:white
 }
-
+/* 
 .leftProject {
-  /* float:right */
-}
+  float:right
+} */
 
 .mask{
   color: white;
@@ -217,7 +219,7 @@ font-family: 'Montserrat', sans-serif;
   margin: 4px 2px;
   cursor: pointer;
   background-color: rgba(44,83,131,1);
-width: 80%
+  width: 80%
 }
 
 
@@ -225,6 +227,7 @@ width: 80%
 color:white;
 background-color:rgba(95,175,201,1);
 }
+
 
 h5 {
   font-weight: 700;
