--- a/src/App.css
+++ b/src/App.css
@@ -131,9 +131,12 @@ color: rgb(255, 255, 255)
 .skillIcon:hover + .skillIconName {
   /* display: block; */
   color: rgb(255, 255, 255);
-  transform:scale(1.3,1.3);
+  /* transform:scale(1.3,1.3); */
 }
 
+.skillIconName {
+  font-size: clamp(0.8rem, 1.2vw, 1.5rem);
+}
 
 /* .strengthIcon:hover + .strengthDescription {
   display: block;
