--- a/src/App.css
+++ b/src/App.css
@@ -256,7 +256,7 @@ font-size: 3vw;
   display: inline-block;
   color: white;
   font-size: 2vw;
-
+  margin: auto;
 }
 
 @media only screen and (max-width: 1024px) {
