--- a/src/App.css
+++ b/src/App.css
@@ -145,10 +145,17 @@ color: rgb(255, 255, 255)
 
 p {
 color: white;
-/* font-size: 1.4vw; */
 font-size: clamp(0.8rem, 1.4vw, 1.8rem);
-
 font-family: 'Montserrat', sans-serif;
+}
+
+.pBorder:after {
+  content: ""; /* This is necessary for  the pseudo element to work. */ 
+  display: block; /* This will put the pseudo element on its own line. */
+  margin: 15px auto; /* This will center the border. */
+  width: 25%; /* Change this to whatever width you want. */
+  border-bottom: 2px solid; /* This creates the border. Replace black with whatever color you want. */
+  color: rgb(0, 191, 255);
 }
 
 h1 {
@@ -250,6 +257,7 @@ font-size: clamp(15px, 3vw, 36px);
 
 .contactRow {
   margin-top: 5%;
+
 }
 
 .contactEmail, .contactPhone, .contactGithub, .contactLinkedin {
@@ -319,8 +327,9 @@ height: 325px;
 
   @media only screen and (max-width: 305px) {
     .contactRow {
-      margin-left: 2%
+      margin-left: 1%
     }
   }
+
 
 
