--- a/src/App.css
+++ b/src/App.css
@@ -65,15 +65,11 @@ padding-bottom: 0px;
   font-weight: 100;
   font-size: clamp(0.8rem, 2vw, 1.8rem);
   font-family: 'Montserrat', sans-serif;
-
 }
 
 .mainBody {
-  /* background-color: rgba(0, 0, 0, 0.3); */
-  /* padding: 20px; */
-  width: 75%;
+  width: 80%;
 }
-
 
  .skillsSection {
   /* background-color: rgba(0, 0, 0, 0.3); */
@@ -330,7 +326,16 @@ height: 325px;
     .skillsSection {
       width: 95%
     }
+    .mainBody {
+      width: 90%;
+    }
   }
+
+  @media only screen and (max-width: 450px) {
+  .mainBody {
+    width: 98%;
+  }
+}
 
   @media only screen and (max-width: 330px) {
     .skillRow {
