--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,15 @@ font-size: clamp(1rem, 2vw, 5rem);
 }
 
 .mainContainer {
-  padding-bottom:500px;
+  position: relative;
+  min-height: 100vh;
+  /* padding-bottom:500px; */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .header, .skillsHeader, .icon, .footer-copyright, .skillIcon, .strengthIcon {
